Fixed submit button visibility

--- a/style4.css
+++ b/style4.css
@@ -17,7 +17,7 @@ section{
 textarea {
   width: 100%;
   margin: 0 auto;
-  height: 250px;
+  height: 200px;
   font-size: 20px;
 }
 .box{
